<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Location"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/turqoise"
        android:padding="16dp"/>

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="14dp"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="go back to previous page"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/tvAddressLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeader"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="Street Number* :"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etAddressLine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddressLine1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
        android:hint="e.g. apt/suite No."
        android:inputType="text"
        android:padding="14dp"/>

    <TextView
        android:id="@+id/tvAddressLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddressLine1"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="Street Name* :"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etAddressLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddressLine2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
        android:hint="e.g. 55th Street NW"
        android:inputType="text"
        android:padding="14dp"/>

    <TextView
        android:id="@+id/tvAddressLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddressLine2"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="Address Line 3:"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etAddressLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddressLine3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
        android:hint="(Opitonal)"
        android:inputType="text"
        android:padding="14dp"/>

    <TextView
        android:id="@+id/tvCityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddressLine3"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="City: *"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCityLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
        android:hint="e.g. New York"
        android:inputType="text"
        android:padding="14dp"/>

    <!-- Add State/Province TextView and EditText -->

    <TextView
        android:id="@+id/tvStateProvinceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCity"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="State/Province: *"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etStateProvince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStateProvinceLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
        android:hint="e.g. New York"
        android:inputType="text"
        android:padding="14dp"/>

    <TextView
        android:id="@+id/tvCountryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etStateProvince"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="Country: *"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCountryLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
        android:hint="e.g. USA"
        android:inputType="text"
        android:padding="14dp"/>

    <TextView
        android:id="@+id/tvAreaCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCountry"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="Postal code: *"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etAreaCodePostalCode"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAreaCodeLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#D3D3D3"
        android:hint="e.g. A#B #DE"
        android:inputType="text"
        android:padding="14dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:backgroundTint="@color/amber"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

</RelativeLayout>
