...
            android:layout_marginTop="8dp"
            android:text="I am an Organizer"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Role"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/amber"
            android:text="Create Event"
...
