...
        android:contentDescription="go back to previous page"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/uploadHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Upload an Event Poster (Image File):"
        android:layout_below="@+id/headerTitle"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
...
