...





            <Button
                android:id="@+id/createEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivProfile"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/amber"
                android:text="Create Event"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/myHostedEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createEvent"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/amber"
                android:text="My Hosted Events"
...
